k8s/base/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: ecom
spec:
  replicas: 1
  selector:
    matchLabels: { app: user-service }
  template:
    metadata:
      labels: { app: user-service }
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 100
        runAsGroup: 101
        seccompProfile: { type: RuntimeDefault }
      containers:
        - name: user-service
          image: ecomd-user-service:latest
          imagePullPolicy: IfNotPresent
          ports: [{ containerPort: 8081 }, { containerPort: 9081 }]
          resources:
            requests: { cpu: 150m, memory: 256Mi }
            limits: { cpu: 500m, memory: 512Mi }
          securityContext:
            allowPrivilegeEscalation: false
            capabilities: { drop: ["ALL"] }
          volumeMounts:
            - { name: spiffe-workload-api, mountPath: /spiffe-workload-api, readOnly: true }
          readinessProbe:
            tcpSocket: { port: 8081 }
            initialDelaySeconds: 100
            periodSeconds: 10
          livenessProbe:
            tcpSocket: { port: 8081 }
            initialDelaySeconds: 220
            periodSeconds: 15
      volumes:
        - name: spiffe-workload-api
          csi:
            driver: csi.spiffe.io
            readOnly: true
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: ecom
spec:
  selector: { app: user-service }
  ports: [{ name: http, port: 8081, targetPort: 8081 }, { name: metrics, port: 9081, targetPort: 9081 }]
